--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ nav a:hover{
 /*Req 3b*/
 /*Write selector/rule property to position the skip class element*/
 .skip a:focus{
+  position: absolute;
   top: 10px;
 }
 
@@ -97,7 +98,7 @@ nav a:hover{
   display: grid;
   grid-template-columns: 1fr 3fr 3fr 1fr;
   grid-template-rows: auto auto auto auto;
-  grid-row-gap: 20px;
+  row-gap: 20px;
 }
 
 header{
@@ -114,7 +115,7 @@ header{
   /*Req 6b*/
   /*Set background-image to header.jpg */
   background-repeat: no-repeat;
-  background-image: url("images/header.jpg");
+  background-image: url("../images/header.jpg");
  
 
 }
@@ -177,7 +178,6 @@ header{
     padding: 30px 0px;
     /*Your code here:*/
     text-align: right;
-    vertical-align: middle;
   }
 
   /*Req 11*/
